src/QGraphicsScene.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsSceneCtor_1(void * parent);
EXTERNC void * SCWQGraphicsSceneCtor_1(void * parent);
EXTERNC void * QWQGraphicsSceneCtor_3(double  x, double  y, double  width, double  height, void * parent);
EXTERNC void * SCWQGraphicsSceneCtor_3(double  x, double  y, double  width, double  height, void * parent);
EXTERNC void * QWQGraphicsScenesceneRect(void * obj);
EXTERNC double QWQGraphicsScenewidth(void * obj);
EXTERNC double QWQGraphicsSceneheight(void * obj);
EXTERNC int QWQGraphicsSceneitemIndexMethod(void * obj);
EXTERNC int8_t QWQGraphicsSceneisSortCacheEnabled(void * obj);
EXTERNC void * QWQGraphicsSceneitemsBoundingRect(void * obj);
EXTERNC void QWQGraphicsSceneaddItem(void * obj, void * item);
EXTERNC void * QWQGraphicsSceneaddEllipse_1(void * obj, void * rect, void * pen, void * brush);
EXTERNC void * QWQGraphicsSceneaddLine_1(void * obj, void * line, void * pen);
EXTERNC void * QWQGraphicsSceneaddPath(void * obj, void * path, void * pen, void * brush);
EXTERNC void * QWQGraphicsSceneaddPixmap(void * obj, void * pixmap);
EXTERNC void * QWQGraphicsSceneaddRect_1(void * obj, void * rect, void * pen, void * brush);
EXTERNC void * QWQGraphicsSceneaddText(void * obj, char * text, void * font);
EXTERNC void * QWQGraphicsSceneaddSimpleText(void * obj, char * text, void * font);
EXTERNC void * QWQGraphicsSceneaddWidget(void * obj, void * widget, int  wFlags);
EXTERNC void * QWQGraphicsSceneaddEllipse_2(void * obj, double  x, double  y, double  w, double  h, void * pen, void * brush);
EXTERNC void * QWQGraphicsSceneaddLine_2(void * obj, double  x1, double  y1, double  x2, double  y2, void * pen);
EXTERNC void * QWQGraphicsSceneaddRect_2(void * obj, double  x, double  y, double  w, double  h, void * pen, void * brush);
EXTERNC void * QWQGraphicsScenemouseGrabberItem(void * obj);
EXTERNC void * QWQGraphicsScenebackgroundBrush(void * obj);
EXTERNC void * QWQGraphicsSceneactivePanel(void * obj);
EXTERNC void * QWQGraphicsSceneactiveWindow(void * obj);
EXTERNC double QWQGraphicsSceneminimumRenderSize(void * obj);
EXTERNC void QWQGraphicsSceneadvance(void * obj);
EXTERNC void QWvalidateCB_QGraphicsScene(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsSceneDtor(void *);
EXTERNC void SCWQGraphicsSceneDtor(void *);